--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
   </style>  
 
-  <title>River City Computers in Mechanicsville, VA</title>
+  <title>River City Logic in Mechanicsville, VA</title>
 </head>
 <body>
   <div id="content">
